Major refractors pt.1